Fixes alignment for cat profiles on cat pages on mobile devices 375px and larger

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -362,6 +362,7 @@ img {
     flex-direction: column;
     justify-content: center;
     padding: 0 0 10px;
+    align-items: center;
 }
 
 .cats {
